# Monero-TipBot

./: .appveyor.yml.swp  .travis.yml  CMakeLists.txt  README.md  XMR Discord TipBot.plog  XMR Discord TipBot.sln  appveyor.yml  language.json
Coins/: intensecoin.json  lethean.json  monero.json  wownero.json
Debug/: .gitignore
Scripts/: server.chai  test.chai
XMR Discord TipBot/: Account.cpp  Account.h  AccountException.cpp  AccountException.h  Discord.cpp  Discord.h  DiscordCommands.cpp  DiscordCommands.h  RPC.cpp  RPC.h  RPCException.cpp  RPCException.h  Util.cpp  Util.h  XMR Discord TipBot.vcxproj  XMR Discord TipBot.vcxproj.filters  main.cpp
XMR Discord TipBot/Debug/: .gitignore
XMR Discord TipBot/Debug/XMR Disc.85D113EA.tlog/: .gitignore
XMR Discord TipBot/x64/Debug/: .gitignore
XMR Discord TipBot/x64/Debug/XMR Disc.85D113EA.tlog/: .gitignore
src/: Account.cpp  Account.h  AccountException.cpp  AppBaseClass.h  CLI.cpp  CLI.h  ChatRewards.cpp  ChatRewards.h  Config.cpp  Config.h  Discord.cpp  Discord.h  DiscordCommands.cpp  DiscordCommands.h  Dummy.cpp  Dummy.h  Faucet.cpp  Faucet.h  Language.cpp  Language.h  Lottery.cpp  Lottery.h  Projects.cpp  Projects.h  RPC.cpp  RPC.h  RPCException.h  RPCManager.cpp  RPCManager.h  Tip.cpp  Tip.h  Tipbot.cpp  Tipbot.h  Util.cpp  Util.h  main.cpp
src/Apps/: CLI.cpp  CLI.h  ChatRewards.cpp  ChatRewards.h  Faucet.cpp  Faucet.h  Lottery.cpp  Lottery.h  Projects.cpp  Projects.h  ScriptCLI.cpp  ScriptCLI.h  Tip.cpp  Tip.h
src/Core/: Account.cpp  Account.h  AccountException.h  AppBaseClass.h  Config.cpp  Config.h  Language.cpp  Language.h  RPC.cpp  RPC.h  RPCException.cpp  RPCException.h  RPCManager.cpp  RPCManager.h  Script.cpp  Script.h  ScriptDefs.cpp  ScriptDefs.h  Server.cpp  Server.h  Tipbot.cpp  Tipbot.h  Util.cpp  Util.h  main.cpp  types.h
